--- a/pages/story.html
+++ b/pages/story.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<base href="/" />
+	<base href="https://cliop.github.io/theoldmanandthelighthouse/" />
 
 	<title>The Old Man and the Lighthouse - The Story</title>
 
