--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<base href="https://cliop.github.io/theoldmanandthelighthouse/" />
 
 	<title>The Old Man and the Lighthouse</title>
 
