--- a/index.html
+++ b/index.html
@@ -4,49 +4,49 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<base href="https://cliop.github.io/theoldmanandthelighthouse/" />
+
+	<base href="/" />
 
 	<title>The Old Man and the Lighthouse</title>
 
-	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="/assets/css/style.css">
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@200;400;600;800;900&family=Noto+Serif+Display:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&display=swap" rel="stylesheet"> 
 
-	<script src="assets/js/fontawesome.js" type="text/javascript" crossorigin="anonymous" defer></script>
-	<script src="assets/js/scripts.js" type="text/javascript" crossorigin="anonymous" defer></script>
-	<script src="assets/locale/language-switcher.js" type="text/javascript" crossorigin="anonymous" defer></script>
+	<script src="/assets/js/fontawesome.js" type="text/javascript" crossorigin="anonymous" defer></script>
+	<script src="/assets/js/scripts.js" type="text/javascript" crossorigin="anonymous" defer></script>
+	<script src="/assets/locale/language-switcher.js" type="text/javascript" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
 	<header class="columns">
 		<div class="column is-full top-bar">
-				<div id="language-switcher">
-					<div class="switcher">
-						<ul class="switcher-dropdown" lang-switcher></ul>
-					</div>
+			<div id="language-switcher">
+				<div class="switcher">
+					<ul class="switcher-dropdown" lang-switcher></ul>
 				</div>
-
 			</div>
 
-			<div class="column content">
-				<a href="/theoldmanandthelighthouse/" id="logo" class="logo">
-					<img src="assets/img/Logo-en.png" alt="" data-lang-key="logoAlt" data-logo>
-				</a>
+		</div>
 
-				<nav class="navbar" role="navigation" aria-label="main navigation">
-					<ul>
-						<li><a href="/theoldmanandthelighthouse/" class="menu-item" data-lang-key="nav-home">home</a></li>
-						<li><a href="pages/story.html" class="menu-item" data-lang-key="nav-story">the story</a></li>
-						<li><a href="pages/backstage.html" class="menu-item" data-lang-key="nav-backstage">backstage</a></li>
-					</ul>
-				</nav>
-			</div>
+		<div class="column content">
+			<a href="/theoldmanandthelighthouse/" id="logo" class="logo">
+				<img src="assets/img/Logo-en.png" alt="" data-lang-key="logoAlt" data-logo>
+			</a>
+
+			<nav class="navbar" role="navigation" aria-label="main navigation">
+				<ul>
+					<li><a href="/theoldmanandthelighthouse/" class="menu-item" data-lang-key="nav-home">home</a></li>
+					<li><a href="pages/story.html" class="menu-item" data-lang-key="nav-story">the story</a></li>
+					<li><a href="pages/backstage.html" class="menu-item" data-lang-key="nav-backstage">backstage</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 
 	<main id="content-wrap" class="columns">
