--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 	<link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@200;400;600;800;900&family=Noto+Serif+Display:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&display=swap" rel="stylesheet"> 
 
-	<script src="/assets/js/fontawesome.js" type="text/javascript" crossorigin="anonymous" defer></script>
-	<script src="/assets/js/scripts.js" type="text/javascript" crossorigin="anonymous" defer></script>
-	<script src="/assets/locale/language-switcher.js" type="text/javascript" crossorigin="anonymous" defer></script>
+	<script src="assets/js/fontawesome.js" type="text/javascript" crossorigin="anonymous" defer></script>
+	<script src="assets/js/scripts.js" type="text/javascript" crossorigin="anonymous" defer></script>
+	<script src="assets/locale/language-switcher.js" type="text/javascript" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
