--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -24,30 +24,7 @@
 </head>
 
 <body>
-	<header class="columns">
-		<div class="column is-full top-bar">
-			<div id="language-switcher">
-				<div class="switcher">
-					<ul class="switcher-dropdown" lang-switcher></ul>
-				</div>
-			</div>
-
-		</div>
-
-		<div class="column content">
-			<a href="/theoldmanandthelighthouse/" id="logo" class="logo">
-				<img src="assets/img/Logo-en.png" alt="" data-lang-key="logoAlt" data-logo>
-			</a>
-
-			<nav class="navbar" role="navigation" aria-label="main navigation">
-				<ul>
-					<li><a href="/theoldmanandthelighthouse/" class="menu-item" data-lang-key="nav-home">home</a></li>
-					<li><a href="pages/story.html" class="menu-item" data-lang-key="nav-story">the story</a></li>
-					<li><a href="pages/backstage.html" class="menu-item" data-lang-key="nav-backstage">backstage</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
+	<header is="header-template" class="columns"></header>
 
 	<main id="content-wrap" class="columns">
 		<article class="column is-half">
@@ -62,8 +39,6 @@
 		</article>
 	</main>
 
-	<footer class="columns">
-		<div class="copyright"><span id="current-year"></span> © <a href="https://clio.studio" target="_blank">Clio P.</a> | All rights reserved.</div>
-	</footer>
+	<footer is="footer-template" class="columns"></footer>
 </body>
 </html>
