--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<title>The Old Man and the Lighthouse</title>
 
-	<link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
